reset button added

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         Your wins 0, Computer wins 0, Ties 0
       </p>
 
-      <!-- <button type="button" class="rst-btn" onclick="resetall()">
+      <button type="button" class="rst-btn" onclick="resetall()">
         Reset
-      </button> -->
+      </button>
 
   </div>
 
